--- a/springBoot_aplicacion/src/main/resources/templates/index.html
+++ b/springBoot_aplicacion/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 
 
     <!--nuestro css-->
-    <link rel="stylesheet" type="text/css" href="static/css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
     
 </head>
 <body>
@@ -21,7 +21,7 @@
         <div class="col-sm-8 main-section" >
             <div class="modal-content">
                 <div class="col-12 user-img">
-                    <img src="static/img/avatar.png">
+                    <img src="img/avatar.png">
                 <form class="col-12">
                     <div class="form-group" id="user-group">
                         <input type="text" class="form-control" placeholder="Nombre de usuario"/>
