--- a/springBoot_aplicacion/src/main/resources/templates/user-form/user-form.html
+++ b/springBoot_aplicacion/src/main/resources/templates/user-form/user-form.html
@@ -42,51 +42,67 @@
 </head>
 <body>
        <!-- Formulario de usuarios-->
-       <form class="form" role="form" autocomplete="off">
+       <form id="userForm" th:object="${userForm}" method="post" class="form" role="form">
+       	   <input class="form-control" type="hidden" th:field="${userForm.id}">
            <div class="form-group row">
                <label class="col-lg-3 col-form-label form-control-label">First name</label>
                <div class="col-lg-9">
-                   <input class="form-control" type="text" >
+                   <input class="form-control" type="text" th:field="${userForm.firstname}">
+                   <div class="alert-danger" th:if="${#fields.hasErrors('firstname')}" th:errors="*{firstname}">Name Error</div>
                </div>
            </div>
            <div class="form-group row">
                <label class="col-lg-3 col-form-label form-control-label">Last
                    name</label>
                <div class="col-lg-9">
-                   <input class="form-control" type="text" >
+                   <input class="form-control" type="text" th:field="${userForm.lastname}">
+                   <div class="alert-danger" th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}">Name Error</div>
                </div>
            </div>
            <div class="form-group row">
                <label class="col-lg-3 col-form-label form-control-label">Email</label>
                <div class="col-lg-9">
-                   <input class="form-control" type="email">
+                   <input class="form-control" type="email" th:field="${userForm.email}">
+                   <div class="alert-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</div>
                </div>
            </div>
            <div class="form-group row">
                <label class="col-lg-3 col-form-label form-control-label">Username</label>
                <div class="col-lg-9">
-                   <input class="form-control" type="text">
+                   <input class="form-control" type="text" th:field="${userForm.username}">
+                   <div class="alert-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username Error</div>
                </div>
            </div>
            <div class="form-group row">
+			 <label th:text="Roles" class="col-lg-3 col-form-label form-control-label"></label>
+			 <div class="col-lg-9">
+				<select th:field="${userForm.roles}" class="form-control" size="3">
+					<option th:each="role :${roles}" th:value="${role.id}" th:text="${role.name}">
+					</option>
+				</select>
+			 </div>
+			</div>
+           <div class="form-group row">
                <label class="col-lg-3 col-form-label form-control-label">Password</label>
                <div class="col-lg-9">
-                   <input class="form-control" type="password">
+                   <input class="form-control" type="password" th:field="${userForm.password}">
+                   <div class="alert-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Email Error</div>
                </div>
            </div>
            <div class="form-group row">
                <label class="col-lg-3 col-form-label form-control-label">Confirm</label>
                <div class="col-lg-9">
-                   <input class="form-control" type="password" >
+                   <input class="form-control" type="password" th:field="${userForm.confirmPassword}">
                </div>
            </div>
            <div class="form-group row">
                <div class="col-lg-12 text-center">
                    <input type="reset" class="btn btn-secondary" value="Cancel">
-                   <input type="button" class="btn btn-primary"
+                   <input type="submit" class="btn btn-primary"
                        value="Save Changes">
                </div>
            </div>
+           <div class="alert alert-danger text-center" th:if="${formError}" th:text="${formError}">Error Message</div>
        </form>
 </body>
 </html>
