--- a/springBoot_aplicacion/src/main/resources/templates/user-form/confirm-delete-dialog.html
+++ b/springBoot_aplicacion/src/main/resources/templates/user-form/confirm-delete-dialog.html
@@ -4,7 +4,7 @@
 	      <div class="modal-header">
 	        <h5 class="modal-title" id="exampleModalLongTitle">Confirm Delete</h5>
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-	          <span aria-hidden="true">×</span>
+	          <span aria-hidden="true">X</span>
 	        </button>
 	      </div>
 	      <div class="modal-body">
