--- a/springBoot_aplicacion/src/main/resources/templates/user-form/user-form.html
+++ b/springBoot_aplicacion/src/main/resources/templates/user-form/user-form.html
@@ -1,44 +1,3 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>User information and form</title>
-	<script
- 		src="https://code.jquery.com/jquery-3.3.1.min.js"
- 			integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
- 			crossorigin="anonymous"></script>
-	
-	<!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina-->
-	<link rel="stylesheet"
-		href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<script
-		src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<script 
-		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	
-	<!-- Los iconos tipo Solid de Fontawesome-->
-	<link rel="stylesheet"
-		href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
-	<script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-	
-	<!-- Nuestro css-->
-	<link rel="stylesheet" type="text/css" href="static/css/user-form.css"
-		th:href="@{/css/user-form.css}">
-
-	<!-- DATA TABLE -->
-	<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-	<script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css">	
-	<link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
-
-<script type="text/javascript">
-    $(document).ready(function() {
-        //Asegurate que el id que le diste a la tabla sea igual al texto despues del simbolo #
-        $('#userList').DataTable();
-    } );
-</script>
-</head>
-
-<body>
        <!-- Formulario de usuarios-->
        <form id="userForm" th:object="${userForm}" th:action="${editMode}?@{/editUser}:@{/userForm}" method="post" class="form" role="form" autocomplete="off">
        	   <input class="form-control" type="hidden" th:field="${userForm.id}" th:if="${editMode}">
@@ -98,12 +57,13 @@
            <div class="form-group row">
                <div class="col-lg-12 text-center">
                    <a class="btn btn-secondary" th:href="@{'/editUser/cancel'}">Cancel</a>
+                   <button type="button" class="btn btn-secondary" data-toggle="modal" th:if="${editMode}" data-target="#changePasswordModal">Change Password</button>
                    <input type="submit" class="btn btn-primary"
                        value="Save Changes" th:value="${editMode}?'Save User':'Create User'">
                </div>
            </div>
            <div class="alert alert-danger text-center" th:if="${formError}" th:text="${formError}">Error Message</div>
+           <div class="alert alert-success text-center d-none" id="formSuccess" th:if="${editMode}" >Success MEssage</div>
        </form>
-</body>
-</html>
+
 
