commit Cap 9. Close #9

--- a/springBoot_aplicacion/src/main/resources/templates/user-form/change-password.html
+++ b/springBoot_aplicacion/src/main/resources/templates/user-form/change-password.html
@@ -9,11 +9,12 @@
       </div>
       <div class="modal-body">
         <form id="changePasswordForm" th:object="${passwordForm}" method="post" class="form" role="form">
-			<input class="form-control" type="hidden" th:field="${passwordForm.id}">
-			<div class="form-group row">
+<!-- 			<input class="form-control" type="hidden" th:field="${passwordForm.id}"> -->
+			<input th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"  type="hidden" id="currentPassword" value="blank"  />
+			<div   th:unless="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" class="form-group row">
 				<label class="col-lg-3 col-form-label 	form-control-label">Current Password</label>
 				<div class="col-lg-9">
-					<input class="form-control" type="password" th:field="${passwordForm.currentPassword}">
+					<input class="form-control" type="password"  th:field="${passwordForm.currentPassword}">
 					<div class="alert-danger" th:if="${#fields.hasErrors('currentPassword')}" th:errors="*{currentPassword}">Password</div>
 				</div>
 			</div>
@@ -51,7 +52,7 @@ function submitChangePassword(){
 	params["currentPassword"] = $("#currentPassword").val();
 	params["newPassword"] = $("#newPassword").val();
 	params["confirmPassword"] = $("#confirmPassword").val();
-
+		
 	$.ajax({
         type: "POST",
         contentType: "application/json",
@@ -66,15 +67,18 @@ function submitChangePassword(){
         	$("#changePasswordError").addClass( "d-none" );
         	$("#formSuccess").removeClass( "d-none" );
             $("#formSuccess").html("Password Actualizado exitosmante!.");
-
             $('#changePasswordModal').modal('toggle');
+           
             setTimeout(function(){	$("#formSuccess").hide('slow'); }, 2000);
-        },
+            
+            window.location = "/editUser/"+$("#id").val();
+            },
         error: function (e) {
             $("#changePasswordError").removeClass( "d-none" );
             $("#formSuccess").addClass( "d-none" );
             $("#changePasswordError").html(e.responseText);
         }
+
     });
 
 }
