--- a/springBoot_aplicacion/src/main/resources/templates/index.html
+++ b/springBoot_aplicacion/src/main/resources/templates/index.html
@@ -18,22 +18,29 @@
 </head>
 <body>
     <div class="modal-dialog text-center">
-        <div class="col-sm-8 main-section" >
+        <div class="col-sm-8 main-section">
             <div class="modal-content">
                 <div class="col-12 user-img">
-                    <img src="img/avatar.png">
-                <form class="col-12">
+                    <img src="static/img/user.png" th:src="@{/img/avatar.png}"/>
+                </div>
+                <form class="col-12" th:action="@{/login}" method="post">
                     <div class="form-group" id="user-group">
-                        <input type="text" class="form-control" placeholder="Nombre de usuario"/>
+                        <input type="text" class="form-control" placeholder="Nombre de usuario" name="username"/>
                     </div>
                     <div class="form-group" id="contrasenia-group">
-                        <input type="password" class="form-control" placeholder="Contrasenia"/>
+                        <input type="password" class="form-control" placeholder="Contrasenia" name="password"/>
                     </div>
-                    <button type="submit" class="btn btn-primary"><i class="fas fa-sign-in-alt"> </i> Ingresar</button>
+                    <button type="submit" class="btn btn-primary"><i class="fas fa-sign-in-alt"></i>  Ingresar </button>
                 </form>
                 <div class="col-12 forgot">
-                    <a href="#">Recordar Contrasenia?</a>
+                    <a href="#">Recordar contrasena?</a>
                 </div>
+                <div th:if="${param.error}" class="alert alert-danger" role="alert">
+		            Invalid username and password.
+		        </div>
+		        <div th:if="${param.logout}" class="alert alert-success" role="alert">
+		            You have been logged out.
+		        </div>
             </div>
         </div>
     </div>
