--- a/springBoot_aplicacion/src/main/resources/templates/user-form/user-form.html
+++ b/springBoot_aplicacion/src/main/resources/templates/user-form/user-form.html
@@ -1,3 +1,5 @@
+
+<div th:with="disableFields=!${editMode} and ${#authorization.expression('hasRole(''ROLE_USER'')')}">
        <!-- Formulario de usuarios-->
        <form id="userForm" th:object="${userForm}" th:action="${editMode}?@{/editUser}:@{/userForm}" method="post" class="form" role="form" autocomplete="off">
        	   <input class="form-control" type="hidden" th:field="${userForm.id}" th:if="${editMode}">
@@ -6,7 +8,7 @@
            <div class="form-group row">
                <label class="col-lg-3 col-form-label form-control-label">First name</label>
                <div class="col-lg-9">
-                   <input class="form-control" type="text" th:field="${userForm.firstname}">
+                   <input class="form-control" type="text" th:field="${userForm.firstname}" th:disabled=${disableFields}>
                    <div class="alert-danger" th:if="${#fields.hasErrors('firstname')}" th:errors="*{firstname}">Name Error</div>
                </div>
            </div>
@@ -14,21 +16,21 @@
                <label class="col-lg-3 col-form-label form-control-label">Last
                    name</label>
                <div class="col-lg-9">
-                   <input class="form-control" type="text" th:field="${userForm.lastname}">
+                   <input class="form-control" type="text" th:field="${userForm.lastname}" th:disabled=${disableFields}>
                    <div class="alert-danger" th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}">Name Error</div>
                </div>
            </div>
            <div class="form-group row">
                <label class="col-lg-3 col-form-label form-control-label">Email</label>
                <div class="col-lg-9">
-                   <input class="form-control" type="email" th:field="${userForm.email}">
+                   <input class="form-control" type="email" th:field="${userForm.email}" th:disabled=${disableFields}>
                    <div class="alert-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</div>
                </div>
            </div>
            <div class="form-group row">
                <label class="col-lg-3 col-form-label form-control-label">Username</label>
                <div class="col-lg-9">
-                   <input class="form-control" type="text" th:field="${userForm.username}">
+                   <input class="form-control" type="text" th:field="${userForm.username}" th:disabled=${disableFields}>
                    <div class="alert-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username Error</div>
                </div>
            </div>
@@ -36,7 +38,7 @@
 			 <label th:text="Roles" class="col-lg-3 col-form-label form-control-label"></label>
 			 <div class="col-lg-9">
 				<select th:field="${userForm.roles}" class="form-control" size="3">
-					<option th:each="role :${roles}" th:value="${role.id}" th:text="${role.name}">
+					<option th:each="role :${roles}" th:value="${role.id}" th:text="${role.name}" th:disabled=${disableFields}>
 					</option>
 				</select>
 			 </div>
@@ -44,26 +46,27 @@
            <div class="form-group row"  th:if="${editMode==null or editMode==false}">
                <label class="col-lg-3 col-form-label form-control-label">Password</label>
                <div class="col-lg-9">
-                   <input class="form-control" type="password" th:field="${userForm.password}">
+                   <input class="form-control" type="password" th:field="${userForm.password}" th:disabled=${disableFields}>
                    <div class="alert-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Email Error</div>
                </div>
            </div>
            <div class="form-group row"  th:if="${editMode==null or editMode==false}">
                <label class="col-lg-3 col-form-label form-control-label">Confirm</label>
                <div class="col-lg-9">
-                   <input class="form-control" type="password" th:field="${userForm.confirmPassword}">
+                   <input class="form-control" type="password" th:field="${userForm.confirmPassword}" th:disabled=${disableFields}>
                </div>
            </div>
            <div class="form-group row">
                <div class="col-lg-12 text-center">
                    <a class="btn btn-secondary" th:href="@{'/editUser/cancel'}">Cancel</a>
-                   <button type="button" class="btn btn-secondary" data-toggle="modal" th:if="${editMode}" data-target="#changePasswordModal">Change Password</button>
+                   <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#changePasswordModal"
+                   		th:if="${editMode}" >Change Password</button>
                    <input type="submit" class="btn btn-primary"
                        value="Save Changes" th:value="${editMode}?'Save User':'Create User'">
                </div>
            </div>
            <div class="alert alert-danger text-center" th:if="${formError}" th:text="${formError}">Error Message</div>
-           <div class="alert alert-success text-center d-none" id="formSuccess" th:if="${editMode}" >Success MEssage</div>
+           	<div class="alert alert-success text-center d-none" id="formSuccess" th:if="${editMode}" >Success MEssage</div>
        </form>
-
+</div>
 
